--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -8,7 +8,7 @@
                 <div class="menu">
                     <ul class="menu-lists">
                         <li>
-                            <a routerLink="/product">Product</a>
+                            <a routerLink='/product'>Product</a>
                         </li>
                         <li>
                             <a href="">Features</a>
@@ -22,7 +22,7 @@
                     </ul>
                 </div>
                 <div class="signup">
-                    <button>
+                    <button class="btn-signup">
                         Sign Up
                     </button>
                 </div>
@@ -99,13 +99,30 @@
                 </div>
                 <div class="one-right">
                     <div class="photo">
-                        <img src="" alt="">
+                        
                     </div>
                 </div>
             </div>
             <div class="body-two">
-                <div class="logo">
-                    <img src="" alt="">
+                <div class="logos">
+                    <div class="amazon">
+
+                    </div>
+                    <div class="shopify">
+
+                    </div>
+                    <div class="attentive">
+
+                    </div>
+                    <div class="zapier">
+
+                    </div>
+                    <div class="layers">
+
+                    </div>
+                    <div class="catalog">
+
+                    </div>
                 </div>
             </div>
             <div class="body-three">
@@ -115,8 +132,11 @@
                 <div class="subtitle">
                     Why Choose Our Soft Pouf Sofas
                 </div>
-                <div class="content">
-                    Here is our amazing teaching method that suits for you. Read our features and know the best.
+                <div class="content1">
+                    Here is our amazing teaching method that suits for you. Read our 
+                </div>
+                <div class="content2">
+                    features and know the best.
                 </div>
             </div>
             <div class="body-four">
@@ -130,12 +150,15 @@
                     <div class="main-features">
                         FEATURES
                     </div>
-                    <div class="title">
-                        Why product stories? learn more
+                    <div class="title1">
+                        Why product 
+                    </div>
+                    <div class="title2">
+                        stories? learn more
                     </div>
                     <div class="lists">
                         <div class="lists-one">
-                            <div class="icon-ticke">
+                            <div class="icon-tick">
 
                             </div>
                             <div class="title">
@@ -178,8 +201,11 @@
                     <div class="subtitle">
                         Popular Products
                     </div>
-                    <div class="info">
-                        Check out our most popular collection that suit for you. Here you can find your favorite one.
+                    <div class="info1">
+                        Check out our most popular collection that suit for you. Here you 
+                    </div>
+                    <div class="info2">
+                        can find your favorite one.
                     </div>
                     <div class="view">
                         View All Courses
@@ -187,6 +213,25 @@
                     <div class="ads">
 
                     </div>
+                </div>
+            </div>
+            <div class="body-seven">
+                <div class="reviews">
+                    <div class="title">
+                        Testimonials
+                    </div>
+                    <div class="subtitle">
+                        Which is what our popular customers are saying
+                    </div>
+                    <div class="review-content">
+                        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+                    </div>
+                    <div class="scroll-review">
+
+                    </div>
+                </div>
+                <div class="signup-email">
+
                 </div>
             </div>
         </div>
