--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -22,6 +22,12 @@
             }
             .signup{
                 padding-right: 60px;
+                .btn-signup{
+                    padding: 10px 20px;
+                    background-color: #3a271a;
+                    color: #fff;
+                    border-radius: 5px;
+                }
             }
         }
     }
