--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="one-right">
                     <div class="photo">
-                        
+                        <img src="https://littlenation.com.au/wp-content/uploads/2022/05/Single-Seater-Modular-Sofa-Couch_3.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="body-five">
                 <div class="photo">
-                    <img src="" alt="">
+                    <img src="https://www.jamessaid.com.au/pub/media/catalog/product/cache/60bc85a076056f728f2ffc1bad4c5bef/1/1/117930_0_1_1.webp" alt="">
                 </div>
                 <div class="features">
                     <div class="main-features">
