--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -6,6 +6,8 @@
             justify-content: space-between;
             .logo{
                 padding-left: 80px;
+                font-weight: bold;
+                cursor: pointer;
             }
             .menu{
                 .menu-lists{
