--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -49,21 +49,25 @@
                                 <a href="">Organic Soft Pouf Sofas</a>
                             </li>
                         </div>
-                        <div class="arrows">
-                            <span class="material-symbols-outlined">
-                                arrow_back
-                            </span>
-                            <span class="material-symbols-outlined">
-                                arrow_forward
-                            </span>
+                        <div class="arrow">
+                            <div class="arrow-left">
+                                <span class="material-symbols-outlined">
+                                    arrow_back
+                                </span>
+                            </div>
+                            <div class="arrow-right">
+                                <span class="material-symbols-outlined">
+                                    arrow_forward
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <div class="content-title">
                         <div class="left-content">
                             <div class="icon-one">
                                 <span class="material-symbols-outlined">
-                                    bolt
-                                    </span>
+                                    offline_bolt
+                                </span>
                             </div>
                             <div class="subtitle-one">
                                 Comfortable Seating
@@ -87,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="one-mid">
+                <!-- <div class="one-mid">
                     <div class="content">
                         <div class="content-one">
                             Sustainable Stylish and Simply Irresistible
@@ -96,7 +100,7 @@
                             There are several reasons to consider buying a pouf for your home.
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="one-right">
                     <div class="photo">
                         <img src="https://littlenation.com.au/wp-content/uploads/2022/05/Single-Seater-Modular-Sofa-Couch_3.jpg" alt="">
@@ -104,32 +108,32 @@
                 </div>
             </div>
             <div class="body-two">
-                <div class="logos">
+                <div class="logo">
                     <div class="amazon">
-
+                        <img src="https://img.icons8.com/?size=100&id=E8MFP0NUONwF&format=png&color=000000" alt="">
                     </div>
                     <div class="shopify">
-
+                        <img src="https://img.icons8.com/?size=100&id=p8usiry0dg78&format=png&color=000000" alt="">
                     </div>
                     <div class="attentive">
-
+                        <img src="https://img.icons8.com/?size=100&id=gSTJ1DBV590n&format=png&color=000000" alt="">
                     </div>
                     <div class="zapier">
-
+                        <img src="https://img.icons8.com/?size=100&id=KqE8TqNkyet8&format=png&color=000000" alt="">
                     </div>
                     <div class="layers">
-
+                        <img src="https://img.icons8.com/?size=100&id=JBkLbNGHdzJK&format=png&color=000000" alt="">
                     </div>
                     <div class="catalog">
-
+                        <img src="https://img.icons8.com/?size=100&id=taQKoivsY3AO&format=png&color=000000" alt="">
                     </div>
                 </div>
             </div>
             <div class="body-three">
-                <div class="main-title">
+                <div class="main-title padding-item">
                     Why Choose US
                 </div>
-                <div class="subtitle">
+                <div class="subtitle padding-item">
                     Why Choose Our Soft Pouf Sofas
                 </div>
                 <div class="content1">
@@ -140,14 +144,66 @@
                 </div>
             </div>
             <div class="body-four">
-                <img src="" alt="">
+                <div class="card-item">
+                    <div class="icon padding-10">
+                        <span class="material-symbols-outlined">
+                            compost
+                        </span>
+                    </div>
+                    <div class="title padding-10">
+                        Organic
+                    </div>
+                    <div class="subtitle padding-10">
+                        Our pouf sofas 100% Have organic materials,
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="icon padding-10">
+                        <span class="material-symbols-outlined">
+                            dashboard_2
+                        </span>
+                    </div>
+                    <div class="title padding-10">
+                        Craftsmanship
+                    </div>
+                    <div class="subtitle padding-10">
+                        Merticulously crafted by skilled artisans
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="icon padding-10">
+                        <span class="material-symbols-outlined">
+                            living
+                        </span>
+                    </div>
+                    <div class="title padding-10">
+                        Comfort
+                    </div>
+                    <div class="subtitle padding-10">
+                        Sink into the plush comfort pouf sofas
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="icon padding-10">
+                        <span class="material-symbols-outlined">
+                            star
+                        </span>
+                    </div>
+                    <div class="title padding-10">
+                        Stylish
+                    </div>
+                    <div class="subtitle padding-10">
+                        Our sofas come in a range of classic designs
+                    </div>
+                </div>
+ 
             </div>
             <div class="body-five">
                 <div class="photo">
                     <img src="https://www.jamessaid.com.au/pub/media/catalog/product/cache/60bc85a076056f728f2ffc1bad4c5bef/1/1/117930_0_1_1.webp" alt="">
                 </div>
                 <div class="features">
-                    <div class="main-features">
+                    <div class="main-features padding-item">
                         FEATURES
                     </div>
                     <div class="title1">
@@ -156,35 +212,47 @@
                     <div class="title2">
                         stories? learn more
                     </div>
-                    <div class="lists">
-                        <div class="lists-one">
-                            <div class="icon-tick">
-
-                            </div>
-                            <div class="title">
-                                The Serene Haven Pouf
+                    <div class="lists padding-item">
+                        <div class="lists-one padding-item">
+                            <div class="main">
+                                <div class="icon-tick">
+                                    <span class="material-symbols-outlined">
+                                        check
+                                    </span>
+                                </div>
+                                <div class="title">
+                                    The Serene Haven Pouf
+                                </div>
                             </div>
                             <div class="subtitle">
                                 By converting all your Shopify product pages in AMP format.
                             </div>
                         </div>
-                        <div class="lists-two">
-                            <div class="icon-ticke">
-                                
-                            </div>
-                            <div class="title">
-                                Nature's Embrace Pouf
+                        <div class="lists-two padding-item">
+                            <div class="main">
+                                <div class="icon-tick">
+                                    <span class="material-symbols-outlined">
+                                        check
+                                    </span>
+                                </div>
+                                <div class="title">
+                                    Nature's Embrace Pouf
+                                </div>
                             </div>
                             <div class="subtitle">
                                 AMP is the latest Google technology allowing websites to load at much higher speeds
                             </div>
                         </div>
-                        <div class="lists-three">
-                            <div class="icon-ticke">
-                                
-                            </div>
-                            <div class="title">
-                                Elegance in Simplicity
+                        <div class="lists-three padding-item">
+                            <div class="main">
+                                <div class="icon-tick">
+                                    <span class="material-symbols-outlined">
+                                        check
+                                    </span>
+                                </div>
+                                <div class="title">
+                                    Elegance in Simplicity
+                                </div>
                             </div>
                             <div class="subtitle">
                                 The story format is already a proven layout for giving users a more interactive.
@@ -210,7 +278,7 @@
                     <div class="view">
                         View All Courses
                     </div>
-                    <div class="ads">
+                    <div class="cart">
 
                     </div>
                 </div>
@@ -223,8 +291,11 @@
                     <div class="subtitle">
                         Which is what our popular customers are saying
                     </div>
-                    <div class="review-content">
-                        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+                    <div class="review-content1">
+                        But I must explain to you how all this mistaken idea of 
+                    </div>
+                    <div class="review-content2">
+                        denouncing pleasure and praising pain was born
                     </div>
                     <div class="scroll-review">
 
