--- a/src/assets/styles/body.scss
+++ b/src/assets/styles/body.scss
@@ -2,64 +2,91 @@
     .wrapper-body{
         .body-one{
             display: flex;
-            align-items: center;
-            justify-content: center;
+            // align-items: center;
+            // justify-content: center;
             margin-top: 25px;
+            height: 600px;
             .one-left{
+                margin-top: 130px;
                 .main-title{
-                    padding-top: 80px;
+                    // padding-top: 80px;
                     .name{
                         font-size: 12px;
                         color: grey;
                     }
                     .main-content{
                         font-weight: bold;
-                        font-size: 25px;
+                        font-size: 40px;
+                        margin: 20px 0px;
                         li{
                             a{
                                 color: black;
                             }
                         }
                     }
+                    .arrow{
+                        display: flex;
+                        cursor: pointer;
+                        .arrow-right{
+                            padding-left: 20px;
+                        }
+                    }
+
                 }
                 .content-title{
                     display: flex;
+                    margin-top: 40px;
+                    width: 70%;
                     .left-content{
+                        .icon-one{
+                            padding-bottom: 10px;
+                        }
                         .subtitle-one{
                             font-weight: bold;
                             font-size: 12px;
+                            padding-bottom: 10px;
                         }
                         .mini-title-one{
                             font-size: 12px;
+                            color: gray;
                         }
                     }
                     .right-content{
+                        padding-left: 50px;
+                        .icon-two{
+                            padding-bottom: 10px;
+                        }
                         .subtitle-two{
                             font-weight: bold;
                             font-size: 12px;
+                            padding-bottom: 10px;
                         }
                         .mini-title-two{
                             font-size: 12px;
+                            color: gray;
                         }
                     }
                 }
             }
-            .one-mid{
-                .content{
-                    display: flex;
-                    .content-one{
-                        transform: rotate(-90deg);
-                        font-weight: bold;
-                    }
-                    .content-two{
-                        transform: rotate(-90deg);
-                    }
-                }
-            }
+            // .one-mid{
+            //     align-items: center;
+            //     .content{
+            //         display: flex;
+                    
+            //         .content-one{
+            //             transform: rotate(-90deg);
+            //             font-weight: bold;
+            //         }
+            //         .content-two{
+            //             transform: rotate(-90deg);
+            //         }
+            //     }
+            // }
             .one-right{
                 .photo{
+                    height: 500px;
                     img{
-                        width: auto;
+                        width: 100%;
                         height: 100%;
                     }
                 }
@@ -67,19 +94,31 @@
             }
         }
         .body-two{
-
+            height: 100px;
+            .logo{
+                display: flex;
+                justify-content: space-between;
+                height: 75px;
+                cursor: pointer;
+                img{
+                    height: 100%;
+                }
+            }
         }
          .body-three{
+            margin-top: 120px;
             .main-title{
                 display: block;
                 text-align: center;
+                font-weight: bold;
+                font-size: 20px;
                 color: gold;
             }
             .subtitle{
                 display: block;
                 font-weight: bold;
                 text-align: center;
-                font-size: large;
+                font-size: 25px;
             }
             .content1{
                 display: block;
@@ -95,24 +134,66 @@
             }
             
         }
+        .body-four{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            gap: 20px;
+            margin-top: 75px;
+            .icon{
+                color: rgb(109, 104, 104);
+                background-color: rgb(207 201 193);
+                border-radius: 50%;
+                padding: 10px;
+            }
+            .card-item{
+                flex-direction: column;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: white;
+                padding: 50px 10px;
+                &:hover{
+                    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+                    cursor: pointer;
+                }
+                .title{
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+                .subtitle{
+                    font-size: 15px;
+                    color: gray;
+                    text-align: center;
+                }
+            }
+        }
         .body-five{
+            display: flex;
+            width: 100%;
+            height: 500px;
             .photo{
+                width: 50%;
                 img{
-                    width: auto;
+                    width: 100%;
                     height: 100%;
                 }
             }
             .features{
                 display: block;
-                text-align: end;
+                // text-align: end;
+                width: 50%;
+                padding: 30px;
                 .main-features{
                     color: gold;
+                    font-size: 20px;
                 }
                 .title1{
                     font-weight: bold;
+                    font-size: 25px;
                 }
                 .title2{
                     font-weight: bold;
+                    font-size: 25px;
                 }
                 .subtitle{
                     color: grey;
@@ -121,10 +202,48 @@
                 .lists{
                     .title{
                         font-weight: bold;
+                        padding-left: 20px;
+                        font-size: 17px;
                     }
                     .subtitle{
                         color: gray;
+                        padding-left: 45px;
+                        font-size: 12px;
                     }
+                    .icon-tick{
+                        background-color: rgb(207 201 193);
+                        border-radius: 50%;
+                        // padding: 10px;
+                    }
+                    .lists-one{
+                        .main{
+                            display: flex;
+                        }
+                        &:hover{
+                            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+                            cursor: pointer;
+                        }
+                        
+                    }
+                    .lists-two{
+                        .main{
+                            display: flex;
+                        }
+                        &:hover{
+                            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+                            cursor: pointer;
+                        }
+                    }
+                    .lists-three{
+                        .main{
+                            display: flex;
+                        }
+                        &:hover{
+                            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+                            cursor: pointer;
+                        }
+                    }
+                  
                 }
             }
         }
@@ -132,24 +251,32 @@
             .scroll-ads{
                 .title{
                     color: gold;
+                    font-size: 20px;
+                    padding-bottom: 12px;
                 }
                 .subtitle{
                     font-weight: bold;
+                    font-size: 25px;
+                    padding-bottom: 25px;
                 }
                 .info1{
-                    color: grey;
+                    color: gray;
                     font-size: 12px;
                 }
                 .info2{
-                    color: grey;
+                    color: gray;
                     font-size: 12px;
                 }
                 .view{
+                    font-weight: bold;
                     text-align: end;
-                    color: skyblue;
+                    color: rgb(85, 149, 245);
                     cursor: pointer;
                     text-decoration: underline;
                     font-size: 12px;
+                    &:hover{
+                        color: blue;
+                    }
                 }
             }
         }
@@ -157,16 +284,31 @@
             .title{
                 color: gold;
                 text-align: center;
+                font-size: 20px;
+                padding-bottom: 15px;
             }
             .subtitle{
                 font-weight: bold;
                 text-align: center;
+                font-size: 25px;
+                padding-bottom: 25px;
             }
-            .review-content{
+            .review-content1{
+                color: gray;
+                font-size: 12px;
+                text-align: center;
+            }
+            .review-content2{
                 color: gray;
                 font-size: 12px;
                 text-align: center;
             }
         }
     }
+}
+.padding-item{
+    padding: 20px 0;
+}
+.padding-10{
+    padding: 10px 0;
 }
