--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -1,4 +1,5 @@
 .container-one{
+    margin-top: 25px;
     .wrapper-header{
         .header{
             display: flex;
@@ -8,15 +9,22 @@
                 padding-left: 80px;
                 font-weight: bold;
                 cursor: pointer;
+                &:hover{
+                    font-size: 25px;
+                }
             }
             .menu{
                 .menu-lists{
                     display: flex;
                     align-items: center;
+
                     li{
-                        padding: 0 5px;
+                        padding: 0 10px;
                         a{
                             color: black;
+                            &:hover{
+                                font-weight: bold;
+                            }
                         }
                     }
                 }
@@ -29,6 +37,10 @@
                     background-color: #3a271a;
                     color: #fff;
                     border-radius: 5px;
+                    &:hover{
+                        cursor: pointer;
+                        font-size: 25px;
+                    }
                 }
             }
         }
